Update to calculator layout

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <link rel="stylesheet" href="style.css">
     <title>Calculator</title>
 </head>
+
 <body>
     <h1>Online Calculator</h1>
 
+    <div class="calcText">
+        0
+    </div>
+
     <div class="calcBody">
         <div class="calcRow">
-            <input type="text" name="CalcText" id="CalcText">
-
             <button type="button">&larr;</button>
         </div>
 
@@ -20,26 +23,27 @@
             <button type="button">7</button>
             <button type="button">8</button>
             <button type="button">9</button>
-            <button type="button">&div;</button>
+            <button type="button">&plus;</button>
         </div>
 
         <div class="calcRow">
             <button type="button">4</button>
             <button type="button">5</button>
             <button type="button">6</button>
-            <button type="button">&times;</button>
+            <button type="button">&minus;</button>
         </div>
 
         <div class="calcRow">
             <button type="button">1</button>
             <button type="button">2</button>
             <button type="button">3</button>
-            <button type="button">&minus;</button>
+            <button type="button">&times;</button>
         </div>
 
         <div class="calcRow">
+            <button type="button">,</button>
             <button type="button">0</button>
-            <button type="button">&plus;</button>
+            <button type="button">&div;</button>
             <button type="button">&equals;</button>
         </div>
     </div>
