Added the basic mathematical functions

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <button type="button" onclick="calcWrite('.')">.</button>
             <button type="button" onclick="calcWrite('0')">0</button>
             <button type="button" onclick="setOperand('/')">/</button>
-            <button type="button">&equals;</button>
+            <button type="button" onclick="calculateResult()">&equals;</button>
         </div>
     </div>
 </body>
